--- a/css/main.css
+++ b/css/main.css
@@ -24,5 +24,8 @@ table, th, td {
   border: 1px solid black;
 }
 .left100 {
-margin-left:100px;
+  margin-left:100px;
+}
+.bottom50 {
+  margin-bottom: 50px;
 }
