--- a/css/main.css
+++ b/css/main.css
@@ -29,3 +29,8 @@ table, th, td {
 .bottom50 {
   margin-bottom: 50px;
 }
+.atomicnumber {
+  float: right;
+  margin-right: 10px;
+  font-weight: bold;
+}
