--- a/css/main.css
+++ b/css/main.css
@@ -40,9 +40,9 @@ table, th, td {
 }
 li:first-child::before {
   color: green;
-  content: 'working ';
+  /* screen reader does not read this is display content: 'working '; */
 }
 li:nth-child(2)::before {
   color: red;
-  content: 'also working ';
+  /* content: 'also working ';*/
 }
