--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@ background-color: #98FB98;
 }
 ul {
   list-style: none;
-  margin-left: -40px;
+  text-align: center;
 }
 table, th, td {
   border: 1px solid black;
@@ -49,7 +49,7 @@ table, th, td {
   letter-spacing: -0.05em; 
 }
 td {
-  width: 50px;
+  width: 70px;
 }
 li:first-child::before {
   color: green;
