--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,7 @@ background-color: #98FB98;
 ul {
   list-style: none;
   text-align: center;
+  margin-left: -30px;
 }
 table, th, td {
   border: 1px solid black;
