--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,7 @@ ul {
   list-style: none;
   text-align: center;
   margin-left: -30px;
+  margin-right: 20px;
 }
 table, th, td {
   border: 1px solid black;
