--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ body{
 background-color: #FFFACD;
 }
 .liquids {
-background-color: #B0E0E6;
+background-color: #E6E6FA;
 }
 .gases {
 background-color: #FFDAB9;
