--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ background-color: #E6E6FA;
 background-color: #FFDAB9;
 }
 .artificial {
-background-color: #98FB98;
+background-color: #b0cce8;
 }
 .bold {
   font-weight:bold;
