--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,12 @@ ul {
   margin-left: -30px;
   margin-right: 10px;
 }
+/*
 table, th, td {
+  border: 1px solid black;
+}
+*/
+th, td {
   border: 1px solid black;
 }
 .left100 {
